# llm-sdlc-workflow

./: .coverage  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  README.md  main.py  pipeline.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: pipeline-run.yml
.github/workflows/: ci.yml  pipeline-resume.yml  pipeline-run.yml  pipeline.yml
docs/: AGENT_COMMUNICATION_SPEC.md
examples/: ping_echo_requirements.txt  status_api_requirements.txt
llm_sdlc_workflow/: README.md
llm_sdlc_workflow/agents/: base_agent.py
multi_agent_pipeline/: README.md  main.py  pipeline.py  pipeline.yaml  requirements.txt
multi_agent_pipeline/agents/: __init__.py  architecture_agent.py  base_agent.py  engineering_agent.py  intent_agent.py  review_agent.py  testing_agent.py
multi_agent_pipeline/models/: __init__.py  artifacts.py
multi_agent_pipeline/prompts/: engineering_agent.md  review_agent.md  testing_agent.md
src/llm_sdlc_workflow/: __init__.py  __main__.py  config.py  main_entry.py  pipeline.py
src/llm_sdlc_workflow/agents/: __init__.py  architecture_agent.py  backend_agent.py  base_agent.py  bff_agent.py  discovery_agent.py  engineering_agent.py  frontend_agent.py  infrastructure_agent.py  mobile_agent.py  review_agent.py  spec_agent.py  testing_agent.py
src/llm_sdlc_workflow/models/: artifacts.py
src/llm_sdlc_workflow/prompts/: backend_agent.md  infrastructure_agent.md  mobile_agent.md  review_agent.md
tests/: conftest.py  test_agents.py  test_artifacts.py  test_base_agent.py  test_more_agents.py  test_pipeline.py  test_service_agents.py  test_topology_contract.py
